# zero-day-sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
knowledge/: user_preference.txt
src/zero_day_sentinel/: crew.py  main.py
src/zero_day_sentinel/config/: agents.yaml  llm.yaml  tasks.yaml
src/zero_day_sentinel/tools/: custom_tool.py
