[project]
name = "zero_day_sentinel"
version = "0.1.0"
description = "zero_day_sentinel using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.5.0",
]

[project.scripts]
zero_day_sentinel = "zero_day_sentinel.main:run"
run_crew = "zero_day_sentinel.main:run"
train = "zero_day_sentinel.main:train"
replay = "zero_day_sentinel.main:replay"
test = "zero_day_sentinel.main:test"
run_with_trigger = "zero_day_sentinel.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
